# chuck-norris-webassembly-plugins

./: README.md  pyproject.toml  tests.py  wa_chuck_norris.py
assembly-script/: package-lock.json  package.json
assembly-script/assembly/: index.ts
rust/chuck_norris/: Cargo.toml
rust/chuck_norris/src/: lib.rs
rust/chuck_norris/tests/: test.js
