[tool.poetry]
name = "wa_chuck_norris"
version = "0.1.0"
description = "An example of a project using webassembly plugins"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
pywasm = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
